@@ -10,7 +10,6 @@ use warnings;
 local $Data::Dumper::Indent = 1; local $Data::Dumper::Sortkeys = 1;
 BEGIN { use_ok('HTML::Template::Compiled') };
 BEGIN { use_ok('HTML::Template::Compiled::Plugin::XMLEscape') };
-$HTML::Template::Compiled::NEW_CHECK = 2;
 my $cache = File::Spec->catfile('t', 'cache');
 
 {
